# StreamlitWithFastAPI

./: README.md  compose.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/src/app/: main.py
backend/src/app/api/: __init__.py  router.py
backend/src/app/api/admin/config/: read.py
backend/src/app/api/auth/: __init__.py  signup.py  token.py
backend/src/app/api/check/: __init__.py  get_user.py
backend/src/app/api/config/: __init__.py  read.py  update.py
backend/src/app/auth/: __init__.py  depends.py  util.py
backend/src/app/core/: __init__.py  config.py
backend/src/app/db/: connection.py  util.py
backend/src/app/db/sql/: __init__.py
backend/src/app/db/sql/auth/: __init__.py  query.py
backend/src/app/db/sql/config/: __init__.py  query.py
backend/src/app/dependency/auth/: __init__.py
backend/src/app/schema/auth/: __init__.py  signup.py  token.py
backend/src/app/schema/config/: __init__.py  base.py  read.py  update.py
db/: Dockerfile
db/init/: 000_schema.sql  100_shot.shot.sql  100_usr.user.sql
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.ts
frontend/src/app/: home.py  layout.tsx  page.tsx  providers.tsx
frontend/src/app/admin/: admin_2.py
frontend/src/app/request/: request_2.py
frontend/src/app/respond/: respond_1.py
nginx/: Dockerfile  init.sh  nginx.conf
src/: pyproject.toml
src/backend/: Dockerfile  requirements.txt
src/frontend/: Dockerfile  requirements.txt
src/frontend/app/: home.py
(+9 files in other folders)
